<resources>
    <string name="app_name">e-Tithe</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_reset">Change Password</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="dialog_logout_message">Do you want to log out</string>
    <string name="dialog_cancel_receipt">Do you want to cancel receipt?</string>
    <string name="dialog_confirm">Receipt created cannot be delete. Do you want to continue?</string>
    <string name="dialog_delete_fund">Do you want to delete the payment?</string>
    <string name="dialog_cancel">Do you want to cancel ?</string>
    <string name="save_text">Save</string>
    <string name="sign_text">Sign</string>
    <string name="cancel_text">Cancel</string>
    <string name="addpay_text">Add Pay</string>
    <string name="update_text">Update</string>
    <string name="back_text">Back</string>
    <string name="reset_text">Reset</string>
    <string name="next_text">Next</string>
    <string name="photo_text">Photo</string>
    <string name="dep_text">Dependent</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="find_location">Find</string>
    <string name="upload_text">Upload</string>
    <string name="remove_text">Remove</string>
    <string name="create_text">Next</string>
    <string name="sign_submit">Submit</string>
    <string name="sign_clear">Clear</string>
    <string name="covert_pdf">Show PDF</string>
    <string name="share_pdf">Share</string>
    <string name="share_message">Message</string>
    <string name="remove_picture">Do you want to remove?</string>
    <string name="dialog_delete_message">Do you want to remove?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="success_receipt">Receipt has been successfully created</string>
    <string name="refference_no">Refference No</string>
    <string name="cheque_no">Cheque No</string>
    <string name="bank_name">Bank Name</string>
    <string name="cash">CASH</string>
    <string name="cheque">CHEQUE</string>
    <string name="neft">NEFT</string>
    <string name="upi">UPI ID</string>
    <string name="dialog_amount">Amount</string>
    <string name="dialog_fund_type">Fund Type</string>
    <string name="cheque_date">Cheque Date</string>
    <string name="done">Done</string>
    <string name="print">Print</string>
    <string name="filter_text">Filter</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
</resources>