<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/colorAccent"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_8ssp"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_thumb_up_24" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:gravity="bottom|center"
                android:includeFontPadding="true"
                android:padding="@dimen/_20ssp"
                android:text="@string/success_receipt"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20ssp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_below="@+id/text_title"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_done"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10ssp"
                    android:text="@string/done"
                    android:layout_marginLeft="@dimen/_8ssp"
                    android:layout_marginRight="@dimen/_8ssp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_print"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10ssp"
                    android:text="@string/print"
                    android:layout_marginLeft="@dimen/_8ssp"
                    android:layout_marginRight="@dimen/_8ssp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>